--- a/config/config_pose.yaml
+++ b/config/config_pose.yaml
@@ -1,5 +1,5 @@
-topic_camera: "/dope/webcam/image_raw"
-topic_camera_info: "/dope/webcam/camera_info"
+topic_camera: "/image_view/output"
+topic_camera_info: "/usb_cam/camera_info"
 topic_publishing: "dope"
 input_is_rectified: True   # Whether the input image is rectified (strongly suggested!)
 downscale_height: 400      # if the input image is larger than this, scale it down to this pixel height
@@ -11,13 +11,13 @@ weights: {
     # "meat":"package://dope/weights/meat_20.pth",
     # "mustard":"package://dope/weights/mustard_60.pth",
     "soup":"package://dope/weights/soup_60.pth",
-    #"sugar":"package://dope/weights/sugar_60.pth",
+    "sugar":"package://dope/weights/sugar_60.pth",
     # "bleach":"package://dope/weights/bleach_28_dr.pth"
     
     # NEW OBJECTS - HOPE
     # "AlphabetSoup":"package://dope/weights/AlphabetSoup.pth", 
     # "BBQSauce":"package://dope/weights/BBQSauce.pth", 
-    # "Butter":"package://dope/weights/Butter.pth", 
+    "Butter":"package://dope/weights/Butter.pth", 
     # "Cherries":"package://dope/weights/Cherries.pth", 
     # "ChocolatePudding":"package://dope/weights/ChocolatePudding.pth", 
     # "Cookies":"package://dope/weights/Cookies.pth", 
@@ -28,7 +28,7 @@ weights: {
     # "Ketchup":"package://dope/weights/Ketchup.pth", 
     # "MacaroniAndCheese":"package://dope/weights/MacaroniAndCheese.pth", 
     # "Mayo":"package://dope/weights/Mayo.pth", 
-    # "Milk":"package://dope/weights/Milk.pth", 
+    "Milk":"package://dope/weights/Milk.pth", 
     # "Mushrooms":"package://dope/weights/Mushrooms.pth", 
     # "Mustard":"package://dope/weights/Mustard.pth", 
     # "Parmesan":"package://dope/weights/Parmesan.pth", 
@@ -41,8 +41,8 @@ weights: {
     # "SaladDressing":"package://dope/weights/SaladDressing.pth",
     # "Spaghetti":"package://dope/weights/Spaghetti.pth",
     # "TomatoSauce":"package://dope/weights/TomatoSauce.pth",
-    # "Tuna":"package://dope/weights/Tuna.pth",
-    # "Yogurt":"package://dope/weights/Yogurt.pth",
+    "Tuna":"package://dope/weights/Tuna.pth",
+    "Yogurt":"package://dope/weights/Yogurt.pth",
 
 }
 
@@ -151,8 +151,8 @@ meshes: {
 #    "gelatin": "file://path/to/Dataset_Utilities/nvdu/data/ycb/aligned_cm/009_gelatin_box/google_16k/textured.obj",
 #    "meat":    "file://path/to/Dataset_Utilities/nvdu/data/ycb/aligned_cm/010_potted_meat_can/google_16k/textured.obj",
 #    "mustard": "file://path/to/Dataset_Utilities/nvdu/data/ycb/aligned_cm/006_mustard_bottle/google_16k/textured.obj",
-#    "soup":    "file://path/to/Dataset_Utilities/nvdu/data/ycb/aligned_cm/005_tomato_soup_can/google_16k/textured.obj",
-#    "sugar":   "file://path/to/Dataset_Utilities/nvdu/data/ycb/aligned_cm/004_sugar_box/google_16k/textured.obj",
+    "soup":    "package://dope/weights/005_tomato_soup_can/tsdf/textured.obj",
+    "sugar":   "package://dope/weights/004_sugar_box/google_16k/textured.obj",
 #    "bleach":  "file://path/to/Dataset_Utilities/nvdu/data/ycb/aligned_cm/021_bleach_cleanser/google_16k/textured.obj",
 }
 
